--- a/ios/growUp/Info.plist
+++ b/ios/growUp/Info.plist
@@ -34,7 +34,7 @@
 	<key>NSCameraUsageDescription</key>
 	<string>지금 바로 사진을 찍어 식물을 분석할 수 있도록 카메라를 허용해주세요!</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>RCTNewArchEnabled</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
@@ -46,6 +46,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>Nanum_hana.ttf</string>
+		<string>NanumSquareRoundOTFL.ttf</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
