--- a/package.json
+++ b/package.json
@@ -14,8 +14,12 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native/new-app-screen": "0.80.1",
+    "@types/react-native-dotenv": "^0.2.2",
+    "axios": "^1.10.0",
     "react": "19.1.0",
     "react-native": "0.80.1",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-fs": "^2.20.0",
     "react-native-vision-camera": "^4.7.1"
   },
   "devDependencies": {
