--- a/ios/growUp/Info.plist
+++ b/ios/growUp/Info.plist
@@ -27,8 +27,6 @@
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
-		<false/>
-		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
 	<key>NSCameraUsageDescription</key>
@@ -45,8 +43,9 @@
 	</array>
 	<key>UIAppFonts</key>
 	<array>
-		<string>Nanum_hana.ttf</string>
 		<string>NanumSquareRoundOTFL.ttf</string>
+		<string>NanumSquareRoundOTFL.otf</string>
+		<string>NanumHana.ttf</string>
 	</array>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
