--- a/ios/growUp_jaranayo.xcodeproj/xcshareddata/xcschemes/growUp.xcscheme
+++ b/ios/growUp_jaranayo.xcodeproj/xcshareddata/xcschemes/growUp.xcscheme
@@ -15,8 +15,8 @@
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-               BuildableName = "growUp.app"
-               BlueprintName = "growUp"
+               BuildableName = "growUp_jaranayo.app"
+               BlueprintName = "growUp_jaranayo"
                ReferencedContainer = "container:growUp.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -55,8 +55,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "growUp.app"
-            BlueprintName = "growUp"
+            BuildableName = "growUp_jaranayo.app"
+            BlueprintName = "growUp_jaranayo"
             ReferencedContainer = "container:growUp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -72,8 +72,8 @@
          <BuildableReference
             BuildableIdentifier = "primary"
             BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
-            BuildableName = "growUp.app"
-            BlueprintName = "growUp"
+            BuildableName = "growUp_jaranayo.app"
+            BlueprintName = "growUp_jaranayo"
             ReferencedContainer = "container:growUp.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
