--- a/ios/growUp_jaranayo/Info.plist
+++ b/ios/growUp_jaranayo/Info.plist
@@ -31,6 +31,8 @@
 	</dict>
 	<key>NSCameraUsageDescription</key>
 	<string>지금 바로 사진을 찍어 식물을 분석할 수 있도록 카메라를 허용해주세요!</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>갤러리에서 식물 사진을 선택하여 분석할 수 있도록 사진 접근을 허용해주세요!</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string/>
 	<key>RCTNewArchEnabled</key>
